# bootcamp_jd_aula_19

./: README.md  pyproject.toml  test.db
